1/19/2025
	Added anti-king support for Schrödinger cells and transform cells (doublers), asserting that the modified cells are not diagonally adjacent.
	Added support and test case for crust sandwiches.
	Added support and test case for bust constraints. (h/t clover!)
	Added support and test case for sequence lines.
	Added additional test cases.

1/18/2025
	Major re-factor of code into multiple files. Ideally no impact to functionality.
	Added support for equal sum cages.
	Added test cases.

1/16/2025
	Moved quattroQuadri class to its own file, updated documentation, test case and change log to support.
	Moved cellTransformSudoku (doublers, negators, etc.) classes to their own file, updated documentation, test cases and change log to support.
	Moved doubleDoku and samuraiSubdoku into their own multiSudoku file, updated documentation, test cases and change log to support.
	Moved Schrödinger cell classes into the own file, updated documentation, test cases and change log to support.
	Moved scarySudoku class to its own file. Updated documentation and change log to support.
	Added test cases.

12/28/2024
	Updated position sum constraint to allow only one of position sum or value sum to be clued.
	Updated documentation for Search Nine clues to indicate that a set of digits can be pointed to by an arrow.
	Added test cases.

10/13/2024
	Added support for split pea/split pill lines

10/1/2024
	Added test case for full rank and parity party

9/5/2024
	Added code to have findSolution return the solver status when not in test mode.

9/4/2024 bis
	Added alias for Look-And-Say Cages that parses the typical clue string, and creates the appropriate zone.
	Added support for psycho look-and-say cages. Thanks to The Book Wyrm for the inspiration and initial ideas on coding.

9/4/2024
	Added support for Unique Pairs Lines, a set of lines where each line has no repeats, and the set of digits on any pair of lines have a most one common digit. Constraint due to Paletron...thanks!